Added a Modal Component and added the reserving of rooms